syntax = "proto3";

package score;

option go_package = "analysis-engine/pkg/api/score";

service MetricGRPC {
  rpc GetScore(Request) returns (AnalysisScore); 
}

message Request {
}

message AnalysisScore {
  map<string, NodeScore> scores = 1;
}

message NodeScore {
  float node_score = 1;
  map<string, GPUScore> gpu_scores = 2;
}

message GPUScore {
  float gpu_score = 1;
}